--- a/agc/templates.css
+++ b/agc/templates.css
@@ -67,10 +67,10 @@ html, body {
 }
 
 @media only screen and (min-width: 700px) {
-    .template1, .template2, .template3, .template5, .template6, .template7 {
+    .template2, .template3, .template5, .template7 {
         grid-template-rows: repeat(3,200px);
     }
-    .template8 {        
+    .template1, .template4, .template6, .template8 {        
         grid-template-rows: repeat(4,125px);
     }
     .template1 {
@@ -112,6 +112,12 @@ html, body {
 }
 
 @media only screen and (min-width: 900px) {
+    .template1, .template2, .template3, .template5, .template6, .template7 {
+        grid-template-rows: repeat(3,200px);
+    }
+    .template8 {        
+        grid-template-rows: repeat(4,125px);
+    }
     .template1 {
         grid-template-columns: repeat(6, 1fr);
         grid-template-areas: 
